# cmake-template

./: CMakeLists.txt  README.md
apps/add/: CMakeLists.txt  add.cpp
docs/: CMakeLists.txt  mainpage.md
src/: CMakeLists.txt
src/cmake-template/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cmake-template/: lib.test.cpp
