find_package(Doxygen REQUIRED COMPONENTS doxygen)

set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)

file(GLOB HEADER_FILES CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/include/*/*.h")

doxygen_add_docs(docs ${HEADER_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/mainpage.md"
                 WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
